# tnl

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md
crates/tnl/: Cargo.toml
crates/tnl-e2e/: Cargo.toml
crates/tnl-e2e/src/: lib.rs
crates/tnl-e2e/tests/: full_roundtrip.rs  full_roundtrip_explicit_target.rs  full_roundtrip_ipv6.rs  full_roundtrip_local_down.rs  full_roundtrip_many_headers.rs  full_roundtrip_response_framing.rs  host_rewrite.rs  inspector_e2e.rs  random_subdomain_roundtrip.rs  reconnect.rs  status_stop_roundtrip.rs  wss_dial.rs
crates/tnl-protocol/: Cargo.toml
crates/tnl-protocol/src/: error_page.rs  lib.rs  messages.rs  transport.rs  wordlists.rs
crates/tnl-protocol/tests/: error_page_render.rs
crates/tnl/src/: block_detect.rs  client.rs  completion.rs  config.rs  connect.rs  exit.rs  forwarder.rs  host_header.rs  inspector.rs  invite.rs  lib.rs  main.rs  peek.rs  reconnect.rs  synth.rs  target.rs
crates/tnl/src/commands/: auth.rs  config.rs  doctor.rs  http.rs  init.rs  mod.rs  status.rs  stop.rs  version.rs
crates/tnl/tests/: auth_login.rs  cli_auth_pair.rs  cli_basics.rs  cli_completion.rs  cli_doctor.rs  cli_init.rs  cli_status_stop.rs  dynamic_completion.rs  exit_codes.rs  forwarder_connect_refused.rs  forwarder_connect_timeout.rs  forwarder_dual_stack_ipv4.rs  forwarder_dual_stack_ipv6.rs  forwarder_explicit_ipv4.rs  forwarder_explicit_ipv6.rs  forwarder_local_eof.rs  forwarder_local_malformed.rs  forwarder_local_no_response.rs  forwarder_peek.rs  forwarder_target_parsing.rs  peek_request_head.rs  progress_format.rs  synth_response.rs  version_config_json.rs
crates/tnld/: Cargo.toml
crates/tnld/src/: admin.rs  auth.rs  config.rs  control.rs  data_plane.rs  exit.rs  hash_password.rs  lib.rs  main.rs  pair.rs  random_subdomain.rs  registry.rs  serve.rs
crates/tnld/src/commands/: healthcheck.rs  init.rs  mod.rs  pair.rs  token.rs
crates/tnld/tests/: auth_reload.rs  cli_completion.rs  cli_hash_password.rs  cli_healthcheck.rs  cli_init.rs  cli_pair.rs  cli_token_add.rs  cli_token_list.rs  cli_token_revoke.rs  control_create_tunnel.rs  control_disconnect_releases_subdomain.rs  data_plane_404_no_tunnel.rs  data_plane_503_no_session.rs  data_plane_logs.rs  data_plane_negotiation.rs  data_plane_route.rs  exit_codes.rs  file_perms.rs  pair_endpoints.rs  random_subdomain.rs  reattach.rs  serve_basics.rs  serve_fail_closed.rs  tunnels_endpoints.rs
deploy/: .env.example  Caddy.Dockerfile  Caddyfile  README.md  caddy.Dockerfile.example  config.example.toml  tnl-api.caddy.example  tnl.caddy.example  tnld-compose.yaml.example
docs/: RUNBOOK.md
docs/plans/: 2026-05-26-tnl-v0.1.0-alpha.md  2026-05-27-tnl-v0.1.0-alpha.3-error-attribution.md  2026-05-27-tnl-v0.1.0-beta.md  2026-07-19-dev-server-host-smoothing.md
docs/specs/: 2026-05-26-tnl-design.md  2026-05-27-tnl-v0.1.0-beta-design.md  2026-07-19-dev-server-friction-smoothing-design.md
docs/superpowers/plans/: 2026-05-26-tnl-v0.1.0-alpha.md  2026-05-27-tnl-v0.1.0-alpha.3-error-attribution.md  2026-05-27-tnl-v0.1.0-beta.md
docs/superpowers/specs/: 2026-05-26-tnl-design.md  2026-05-27-tnl-v0.1.0-alpha.2-error-attribution.md  2026-05-27-tnl-v0.1.0-alpha.3-error-attribution.md  2026-05-27-tnl-v0.1.0-beta-design.md
