[workspace]
resolver = "2"
members = ["crates/tnl-protocol", "crates/tnld", "crates/tnl"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["atassis <atassikay38@gmail.com>"]
repository = "https://github.com/atassis/tnl"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.7"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
bytes = "1.7"
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
futures = "0.3"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
ws_stream_tungstenite = "0.13"
yamux = "0.13"
