[workspace]
resolver = "2"
members = ["crates/tnl-protocol", "crates/tnld", "crates/tnl", "crates/tnl-e2e"]

[workspace.package]
version = "0.1.0-beta.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["atassis <atassikay38@gmail.com>"]
repository = "https://github.com/atassis/tnl"
rust-version = "1.94"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
# Pins reflect crates.io heads as of 2026-05-27. Pre-release tracks are
# avoided: argon2 0.5 (latest stable; 0.6 is still rc), dashmap 6 (latest
# stable; 7 is rc).
anyhow = "1"
arc-swap = "1.9"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dashmap = "6"
dialoguer = { version = "0.11", default-features = false, features = ["history", "password"] }
futures = "0.3"
http = "1"
httparse = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
toml = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
async-tungstenite = { version = "0.29", features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
ws_stream_tungstenite = { version = "0.15", features = ["tokio_io"] }
yamux = "0.13"
