[package]
name = "tnl-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# none

[dev-dependencies]
anyhow.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = ["rustls"] }
tempfile = "3"
tnl-protocol = { path = "../tnl-protocol" }
tnld = { path = "../tnld" }
tnl = { path = "../tnl" }
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing-subscriber.workspace = true
