[package]
name = "tnl-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-tungstenite.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid = { workspace = true, features = ["serde"] }
ws_stream_tungstenite.workspace = true
yamux.workspace = true

[dev-dependencies]
async-tungstenite.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
