[package]
name = "tnl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "tnl"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dialoguer.workspace = true
http = "1"
bytes.workspace = true
clap.workspace = true
clap_complete.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-tungstenite.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid = { workspace = true, features = ["serde"] }
ws_stream_tungstenite.workspace = true
yamux.workspace = true

tnl-protocol = { path = "../tnl-protocol" }
nu-ansi-term = "0.50"
parking_lot = "0.12"
url = "2"

[dev-dependencies]
tempfile = "3"
tnld = { path = "../tnld" }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
