[package]
name = "tnld"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "tnld"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
argon2.workspace = true
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3"
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
dashmap.workspace = true
futures.workspace = true
governor = "0.7"
http.workspace = true
httparse.workspace = true
hyper.workspace = true
hyper-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-tungstenite.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid = { workspace = true, features = ["serde"] }
ws_stream_tungstenite.workspace = true
yamux.workspace = true
reqwest = { workspace = true, features = ["rustls"] }

tnl-protocol = { path = "../tnl-protocol" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true, features = ["rustls"] }
http = "1"
async-tungstenite = { workspace = true }
futures = { workspace = true }
regex = "1"
